[gd_scene load_steps=9 format=2]

[ext_resource path="res://SeedIcons.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Scripts/Item.gd" type="Script" id=2]
[ext_resource path="res://libel-suit-rg.ttf" type="DynamicFontData" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 0.5, 0.5 )

[sub_resource type="DynamicFontData" id=2]
antialiased = false
font_path = "res://Coolville.ttf"

[sub_resource type="DynamicFont" id=3]
size = 14
outline_size = 1
outline_color = Color( 0, 0, 0, 0.658824 )
font_data = SubResource( 2 )

[sub_resource type="Animation" id=4]
resource_name = "TooMany"
length = 2.0
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.03, 0.07, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 0 ), Vector2( -0.6, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 2, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Node2D/NotEnough:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.94, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=5]
size = 70
outline_size = 4
outline_color = Color( 0.164706, 0.164706, 0.164706, 1 )
use_filter = true
font_data = ExtResource( 3 )

[node name="Item" type="AnimatedSprite"]
scale = Vector2( 0.5, 0.5 )
z_index = 1
frames = ExtResource( 1 )
frame = 1
script = ExtResource( 2 )

[node name="TextureButton" type="TextureButton" parent="."]
show_behind_parent = true
margin_left = -7.0
margin_top = -7.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 7, 7 )
rect_scale = Vector2( 2, 2 )
size_flags_horizontal = 0
stretch_mode = 3

[node name="SnapArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="SnapArea"]
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Label" type="Node2D" parent="."]
visible = false
z_index = 1

[node name="Label" type="Label" parent="Label"]
margin_left = -15.0764
margin_top = -15.4802
margin_right = 57.9236
margin_bottom = 11.5198
grow_horizontal = 0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 3 )
text = "Type: Acorn
Amount: 1"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/TooMany = SubResource( 4 )

[node name="Node2D" type="Node2D" parent="."]
z_index = 2

[node name="NotEnough" type="Label" parent="Node2D"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -18.5208
margin_top = -15.8512
margin_right = 381.479
margin_bottom = 124.149
rect_scale = Vector2( 0.1, 0.1 )
custom_fonts/font = SubResource( 5 )
text = "not enough room!"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="TextureButton" to="." method="_on_TextureButton_button_down"]
[connection signal="button_up" from="TextureButton" to="." method="_on_TextureButton_button_up"]
[connection signal="mouse_entered" from="TextureButton" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_TextureButton_mouse_exited"]
[connection signal="area_entered" from="SnapArea" to="." method="_on_SnapArea_area_entered"]
